Expand account and session management (#11)
* Return account info from create_account and create_session
* Add GET v1/sessions to get current account info
* Add DELETE v1/sessions to log out
